sim/digit_sim/digit_ar_sim/interface_ctypes.py


        unix_lib_dirs_list = []
        if bitage.startswith("64"):
            # prefer 64 bit if that is our arch
            unix_lib_dirs_list += ["/lib64", "/usr/lib64"]

        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs([])

# Begin libraries
_libs["interface"] = load_library("interface")

# 1 libraries
# End libraries

# No modules

__socklen_t = c_uint# /usr/include/x86_64-linux-gnu/bits/types.h: 210

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 44
for _lib in _libs.values():
    if not _lib.has("llapi_init", "cdecl"):
        continue
    llapi_init = _lib.get("llapi_init", "cdecl")
    llapi_init.argtypes = [String]
    llapi_init.restype = None
    break

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 45
for _lib in _libs.values():
    if not _lib.has("llapi_init_custom", "cdecl"):
        continue
    llapi_init_custom = _lib.get("llapi_init_custom", "cdecl")
    llapi_init_custom.argtypes = [String, c_int, c_int]
    llapi_init_custom.restype = None
    break

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 48
for _lib in _libs.values():
    if not _lib.has("llapi_free", "cdecl"):
        continue
    llapi_free = _lib.get("llapi_free", "cdecl")
    llapi_free.argtypes = []
    llapi_free.restype = None
    break

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 56
class struct_anon_3(Structure):
    pass

struct_anon_3.__slots__ = [
    'w',
    'x',
    'y',
    'z',
]
struct_anon_3._fields_ = [
    ('w', c_double),
    ('x', c_double),
    ('y', c_double),
    ('z', c_double),
]

llapi_quaternion_t = struct_anon_3# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 56

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 80
class struct_anon_4(Structure):
    pass

struct_anon_4.__slots__ = [
    'translation',
    'orientation',
    'linear_velocity',
    'angular_velocity',
]
struct_anon_4._fields_ = [
    ('translation', c_double * int(3)),
    ('orientation', llapi_quaternion_t),
    ('linear_velocity', c_double * int(3)),
    ('angular_velocity', c_double * int(3)),
]

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 88
class struct_anon_5(Structure):
    pass

struct_anon_5.__slots__ = [
    'orientation',
    'angular_velocity',
    'linear_acceleration',
    'magnetic_field',
]
struct_anon_5._fields_ = [
    ('orientation', llapi_quaternion_t),
    ('angular_velocity', c_double * int(3)),
    ('linear_acceleration', c_double * int(3)),
    ('magnetic_field', c_double * int(3)),
]

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 96
class struct_anon_6(Structure):
    pass

struct_anon_6.__slots__ = [
    'position',
    'velocity',
    'torque',
]
struct_anon_6._fields_ = [
    ('position', c_double * int(20)),
    ('velocity', c_double * int(20)),
    ('torque', c_double * int(20)),
]

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 103
class struct_anon_7(Structure):
    pass

struct_anon_7.__slots__ = [
    'position',
    'velocity',
]
struct_anon_7._fields_ = [
    ('position', c_double * int(10)),
    ('velocity', c_double * int(10)),
]

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 111
class struct_anon_8(Structure):
    pass

struct_anon_8.__slots__ = [
    'time',
    'error',
    'base',
    'imu',
    'motor',
    'joint',
    'battery_charge',
]
struct_anon_8._fields_ = [
    ('time', c_double),
    ('error', c_bool),
    ('base', struct_anon_4),
    ('imu', struct_anon_5),
    ('motor', struct_anon_6),
    ('joint', struct_anon_7),
    ('battery_charge', c_int16),
]

llapi_observation_t = struct_anon_8# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 111

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 112
for _lib in _libs.values():
    if not _lib.has("llapi_get_observation", "cdecl"):
        continue
    llapi_get_observation = _lib.get("llapi_get_observation", "cdecl")
    llapi_get_observation.argtypes = [POINTER(llapi_observation_t)]
    llapi_get_observation.restype = c_int
    break

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 127
class struct_anon_9(Structure):
    pass

struct_anon_9.__slots__ = [
    'torque_limit',
    'damping_limit',
    'velocity_limit',
]
struct_anon_9._fields_ = [
    ('torque_limit', c_double * int(20)),
    ('damping_limit', c_double * int(20)),
    ('velocity_limit', c_double * int(20)),
]

llapi_limits_t = struct_anon_9# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 127

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 128
for _lib in _libs.values():
    if not _lib.has("llapi_get_limits", "cdecl"):
        continue
    llapi_get_limits = _lib.get("llapi_get_limits", "cdecl")
    llapi_get_limits.argtypes = []
    llapi_get_limits.restype = POINTER(llapi_limits_t)
    break

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 133
for _lib in _libs.values():
    if not _lib.has("llapi_get_error_shutdown_delay", "cdecl"):
        continue
    llapi_get_error_shutdown_delay = _lib.get("llapi_get_error_shutdown_delay", "cdecl")
    llapi_get_error_shutdown_delay.argtypes = []
    llapi_get_error_shutdown_delay.restype = c_double
    break

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 144
class struct_anon_10(Structure):
    pass

struct_anon_10.__slots__ = [
    'torque',
    'velocity',
    'damping',
]
struct_anon_10._fields_ = [
    ('torque', c_double),
    ('velocity', c_double),
    ('damping', c_double),
]

llapi_motor_t = struct_anon_10# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 144

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 149
class struct_anon_11(Structure):
    pass

struct_anon_11.__slots__ = [
    'motors',
    'fallback_opmode',
    'apply_command',
]
struct_anon_11._fields_ = [
    ('motors', llapi_motor_t * int(20)),
    ('fallback_opmode', c_int32),
    ('apply_command', c_bool),
]

llapi_command_t = struct_anon_11# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 149

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 150
for _lib in _libs.values():
    if not _lib.has("llapi_send_command", "cdecl"):
        continue
    llapi_send_command = _lib.get("llapi_send_command", "cdecl")
    llapi_send_command.argtypes = [POINTER(llapi_command_t)]
    llapi_send_command.restype = None
    break

# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 154
for _lib in _libs.values():
    if not _lib.has("llapi_connected", "cdecl"):
        continue
    llapi_connected = _lib.get("llapi_connected", "cdecl")
    llapi_connected.argtypes = []
    llapi_connected.restype = c_bool
    break

enum_DigitMotors = c_int# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159

LeftHipRoll = 0# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159

LeftHipYaw = (LeftHipRoll + 1)# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159

LeftHipPitch = (LeftHipYaw + 1)# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159

LeftKnee = (LeftHipPitch + 1)# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159

LeftToeA = (LeftKnee + 1)# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159

LeftToeB = (LeftToeA + 1)# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159

RightHipRoll = (LeftToeB + 1)# /home/helei/roadrunner_pr_review/roadrunner_refactor/sim/digit_sim/digit_ar_sim/llapi/lowlevelapi.h: 159
